src/app/pages/trois-six-cinq/trois-six-cinq.component.scss
.container {
  padding: 5% 5%;
  height: 100%;
}
.app-navbar {
  width: 100%;
}

.content--container {
}

.content--img-container {
  width: 100%;
  padding-left: 56px;
  img {
    height: 75px;
  }
}

.content--first-col-img {
  padding-top: 24px;
}

.content--second-col-img {
  padding-top: 24px;
}

.backbtn-container {
  padding-top: 24px;
}

.img-first-plan {
  height: 50%;
  position: relative;
  z-index: 100;
}

